Fonctionnalité header pour le mobile + style
stylisation des projets conforme à la maquette
correction taille police home pour mobile
correction des container projets pour mobile et tablette
correction margin skill manquante qui caché les skills

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -17,8 +17,20 @@
         }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
     .presentation {
         height: 512px;
+        & > h1 {
+            font-size: 2em;
+            text-wrap: nowrap;
+        }
+        & > h2 {
+            font-size: 1.5em;
+            text-wrap: nowrap;
+        }
+        & > p {
+            font-size: 1.3em;
+            text-wrap: nowrap;
+        }
     }
 }
