--- a/src/styles/project.module.scss
+++ b/src/styles/project.module.scss
@@ -110,6 +110,11 @@ $height: 1257.95px;
       width: 100%;
       margin-top: 20px;
       position: relative;
+      box-sizing: border-box;
+      font-size: 1.3em;
+      & > a > button {
+        font-size: 1em;
+      }
     }
 
     .cardcontainer {
@@ -118,24 +123,37 @@ $height: 1257.95px;
       width: 100%;
       padding: 0;  // Réinitialiser le padding si nécessaire
       transform: none;
+      box-sizing: border-box;
+      margin-bottom: 50px;
+
+
 
       .projects {
         width: 100%;
         margin-top: 0;
         gap: 20px;
         transform: none;
+        align-items: center;
+        justify-content: center;
 
         .cards {
-          width: 100%;
+          width: 80%;
           height: auto; // Ajuster la hauteur automatiquement
           flex-direction: column;
           align-items: center;
+          margin-left: 0 !important;
 
           .cardinfo {
             flex-direction: column;
             align-items: center;
             text-align: center;
             margin-top: auto; // Positionner la carte info en bas du conteneur
+            .cardtext {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              font-size: 1.3em;
+            }
           }
         }
       }
@@ -155,8 +173,8 @@ $height: 1257.95px;
       order: 1;
       z-index: 3;
       width: 100%;
-      margin-top: 20px;
       position: relative;
+      box-sizing: border-box;
     }
 
     .cardcontainer {
@@ -164,17 +182,27 @@ $height: 1257.95px;
       left: 0;
       width: 100%;
       padding: 0;  // Réinitialiser le padding si nécessaire
+      transform: none;
+      box-sizing: border-box;
+      margin-bottom: 50px;
+
 
       .projects {
         width: 100%;
         margin-top: 0;
         gap: 20px;
+        transform: none;
+        align-items: center;
+        justify-content: center;
+
 
         .cards {
           width: 80%;
           height: auto; // Ajuster la hauteur automatiquement
           flex-direction: column;
           align-items: center;
+          margin-left: 0 !important;
+
         }
       }
     }
