--- a/src/styles/skills.module.scss
+++ b/src/styles/skills.module.scss
@@ -49,6 +49,7 @@
         height: 150vh;
         display: flex;
         flex-direction: column;
+        margin-bottom: 100%;
         .skillslinks {
             flex-direction: row;
             width: auto;
@@ -86,6 +87,7 @@
     .container {
         flex-direction: column;
         font-size: 1.3rem;
+        margin-bottom: 100%;
         .skillslinks {
             flex-direction: row;
             width: auto;
