--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,3 +1,5 @@
+@import "shared_variables";
+
 .header {
     display: flex;
     position: fixed;
@@ -20,14 +22,19 @@
     padding: 0;
     margin: 0;
     margin-right: 14%;
+
+    .active a {
+      color: $activetext;
+    }
   
     & > li > a {
       text-decoration: none;
-      color: white;
+      color: $textcolor;
       font-weight: bold;
   
       &:hover {
-        text-decoration: underline;
+        color: $texthover;
+        text-decoration: none;
       }
     }
   }
