--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -67,6 +67,16 @@
                 display: flex;
                 flex-direction: column;
                 gap: 60px;
+                .title {
+                    font-size: 1.8rem;
+                    text-wrap: nowrap;
+                }
+                .input {
+                    font-size: 1.2rem;
+                }
+                .textarea {
+                    font-size: 1.3rem;
+                }
             }
         }
 
