--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,10 @@
     --texthover: #A6B9A0
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 
 body {
     color: #E0E0E0;
@@ -61,7 +65,7 @@ section{
 
 @media screen and (max-width: 600px) {
     .modal-wrapper {
-        width: 400px;
+        width: 300px;
         height: 600px;
       }
       
