--- a/src/styles/shared_variables.scss
+++ b/src/styles/shared_variables.scss
@@ -2,5 +2,6 @@ $textcolor: #E0E0E0;
 $secondarytextcolor: #B3C7A6;
 $texthover: #A6B9A0;
 $activetext: #4C6B49 ;
+$btnbackground: #2B3B2E;
 $btnhover : #7F8F61;
 $border : #8C8C8C;
