Dashboard amin créée
Composant cv, dashboard, projects et skills
Chaque composant contient son call api ainsi que ses données
Ajout d'un composant formmodal inutilisé pour le moment
Ajout du model cv
ajout api cvs
Stylisation du dashoard

--- a/src/styles/shared_variables.scss
+++ b/src/styles/shared_variables.scss
@@ -3,5 +3,7 @@ $secondarytextcolor: #B3C7A6;
 $texthover: #A6B9A0;
 $activetext: #4C6B49 ;
 $btnbackground: #2B3B2E;
+$btnbackground2: #212121 ;
 $btnhover : #7F8F61;
+$btnhover2 : #2B3B2E;
 $border : #8C8C8C;
