Afficher l'icon quand elle est selectionner
Fix bug blog
Fix bug contact
Transition pour les skills

--- a/src/styles/skills.module.scss
+++ b/src/styles/skills.module.scss
@@ -37,6 +37,7 @@
         min-width: 655px;
         max-width: 655px;
         max-height: 700px;
+     
         .skillstitle {
             font-size: 2em;
         }
@@ -45,6 +46,13 @@
             grid-template-columns: repeat(4, 1fr);
             grid-column-gap: 50px;
             grid-row-gap: 50px;
+            .skill {
+                transition: 0.4s ease;
+                &:hover {
+                    transform: scale(1.1);
+        
+                }
+            }
         }
     }
 }
