--- a/src/styles/blogveille.module.scss
+++ b/src/styles/blogveille.module.scss
@@ -34,7 +34,7 @@
             .cardinfo {
                 display: flex;
                 flex-direction: column;
-                margin-left: -25%;
+                box-sizing: border-box;
                 height: 130px;
             }
             .category {
