--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -19,11 +19,17 @@
                 background-color: #1F1F1F;
                 border-bottom: 1px solid white !important;
             }
-            .textarea {         
+            .textarea {
                 border: none;
                 color: white;       
                 border-bottom: 1px solid white !important;
+                font-size: 1.3em;
                 background-color: #1F1F1F;
+                height: 100px;
+                min-height: 80px;
+                max-height: 110px;
+                min-width: 200px;
+                max-width: 310px;
             }
             .title { grid-area: 1 / 1 / 2 / 2; 
                 font-size: 2em;
