--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,6 +22,22 @@ section{
     margin-bottom: 90px;
 }
 
+.snap-item {
+  animation: myAnim 2s ease 0s 1 normal forwards;
+}
+
+@keyframes myAnim {
+	0% {
+		opacity: 0;
+		transform: translateY(-50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
 
 .modal-wrapper {
     width: 500px;
