--- a/src/styles/gallery.module.scss
+++ b/src/styles/gallery.module.scss
@@ -1,3 +1,6 @@
+@import "shared_variables";
+
+
 .galleryContainer {
     width: 100%;
     height: auto;
@@ -10,17 +13,29 @@
         grid-gap: 30px;
         .galleryCard {
             width: 100%;
-            height: 300px;
-            background-color:grey;
+            max-height: 500px;
+            height: auto;
+            background-color: #252525;
             border-radius: 10px;
             padding: 10px;
             box-sizing: border-box;
+            transition: transform 0.3s ease-in;
+            &:hover {
+                cursor: pointer;
+                color: $activetext;
+                transform: scale(1.05);
+            }
             img {
-                margin-bottom: 45%;
+                width: 100%;
+                border-radius: 5px;
+                object-fit: cover;
             }
             .galleryCardContent {
                 display: flex;
                 flex-direction: column;
+                .cardTitle {
+                    font-size: 1.3em;
+                }
             }
         }
     }
