--- a/src/styles/gallery.module.scss
+++ b/src/styles/gallery.module.scss
@@ -1,10 +1,13 @@
 @import "shared_variables";
 
-
 .galleryContainer {
     width: 100%;
     height: auto;
     margin-top: 10%;
+    a {
+        color: $textcolor;
+        text-decoration: none;
+    }
     .galleryWrap {
         width: 100%;
         display: grid;
@@ -16,6 +19,7 @@
             max-height: 500px;
             height: auto;
             background-color: #252525;
+            border: 1px white solid;
             border-radius: 10px;
             padding: 10px;
             box-sizing: border-box;
@@ -25,6 +29,10 @@
                 color: $activetext;
                 transform: scale(1.05);
             }
+            .cardTitle {
+                font-size: 1.5em;
+                text-align: center;
+            }
             img {
                 width: 100%;
                 border-radius: 5px;
@@ -33,8 +41,28 @@
             .galleryCardContent {
                 display: flex;
                 flex-direction: column;
-                .cardTitle {
-                    font-size: 1.3em;
+                .cardUniqueID {
+                    display: flex;
+                    color: black;
+                    background-color: white;
+                    border-radius: 10px;
+                    padding: 10px;
+                    box-sizing: border-box;
+                    font-weight: bold;
+                    text-align: center;
+                    object-fit: cover;
+                    max-height: 100px;
+                    .cardNumber {
+                        width: 100%;
+                        font-size: 1.3em;
+                    }
+                }
+                .cardPrototypeContainer {
+                    display: inline-flex;
+                    justify-content: space-between;
+                    .cardPrototype {
+                        font-size: 8px;
+                    }
                 }
             }
         }
