--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -2,19 +2,45 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin-bottom: 50px;
     height: 1024px;
-    padding: 100px;
-        & > h1 {
+    position: relative;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.0)), url('/assets/chromeshapev2.png');
+    background-size: cover;
+    background-position: center;
+    & > h1 {
             font-size: 3em;
+            &::after {
+                display: flex;
+                content:'Fontaine Anthony';
+            }
         }
         & > h2 {
-            font-size: 2em;
-        }
-        & > p {
             font-size: 1.5em;
+            padding: 10px;
+            border: 1px solid transparent;
+            background: linear-gradient(#1F1F1F, #1F1F1F) padding-box,
+            linear-gradient(to bottom, #8C8C8C, #5A7251, #1f3317) border-box;       
+         }
+        .cta {
+            display: flex;
+            gap: 8px;
+            button {
+                background-color: transparent;
+                color: white;
+                border: 1px solid transparent;
+                background: linear-gradient(#1F1F1F, #1F1F1F) padding-box,
+                linear-gradient(to bottom, #8C8C8C, #5A7251, #1f3317) border-box;
+                border-radius: 5px;
+                padding: 15px 20px;
+                cursor: pointer;
+            }
         }
+        h1, h2, .cta {
+            margin-left: 10%;
+        }
+            
 }
 
 @media screen and (max-width: 576px) {
